// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlideDown matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SlideDown
    classes={
      Object {
        "button": "button",
        "content": "content",
        "dot": "dot",
        "hide": "hide",
        "show": "show",
      }
    }
    expanded={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="button"
          onClick={[Function]}
        >
          <Jss(Flexbox)
            alignItems="center"
            display="flex"
            justifyContent="between"
          >
            <Jss(Title)
              className=""
              h={4}
            />
            <Jss(Icon)
              colors={
                Array [
                  "#a7a7a7",
                ]
              }
              iconName="arrowDown"
              style={
                Object {
                  "transform": "",
                }
              }
              transition="0.3s all"
            />
          </Jss(Flexbox)>
        </div>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Jss(Flexbox)
            alignItems="center"
            display="flex"
            justifyContent="between"
          >
            <Jss(Title)
              className=""
              h={4}
            />
            <Jss(Icon)
              colors={
                Array [
                  "#a7a7a7",
                ]
              }
              iconName="arrowDown"
              style={
                Object {
                  "transform": "",
                }
              }
              transition="0.3s all"
            />
          </Jss(Flexbox)>,
          "className": "button",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "alignItems": "center",
            "children": Array [
              <Jss(Title)
                className=""
                h={4}
              />,
              <Jss(Icon)
                colors={
                  Array [
                    "#a7a7a7",
                  ]
                }
                iconName="arrowDown"
                style={
                  Object {
                    "transform": "",
                  }
                }
                transition="0.3s all"
              />,
            ],
            "display": "flex",
            "justifyContent": "between",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": undefined,
                "className": "",
                "h": 4,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "colors": Array [
                  "#a7a7a7",
                ],
                "iconName": "arrowDown",
                "style": Object {
                  "transform": "",
                },
                "transition": "0.3s all",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="button"
            onClick={[Function]}
          >
            <Jss(Flexbox)
              alignItems="center"
              display="flex"
              justifyContent="between"
            >
              <Jss(Title)
                className=""
                h={4}
              />
              <Jss(Icon)
                colors={
                  Array [
                    "#a7a7a7",
                  ]
                }
                iconName="arrowDown"
                style={
                  Object {
                    "transform": "",
                  }
                }
                transition="0.3s all"
              />
            </Jss(Flexbox)>
          </div>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Jss(Flexbox)
              alignItems="center"
              display="flex"
              justifyContent="between"
            >
              <Jss(Title)
                className=""
                h={4}
              />
              <Jss(Icon)
                colors={
                  Array [
                    "#a7a7a7",
                  ]
                }
                iconName="arrowDown"
                style={
                  Object {
                    "transform": "",
                  }
                }
                transition="0.3s all"
              />
            </Jss(Flexbox)>,
            "className": "button",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "alignItems": "center",
              "children": Array [
                <Jss(Title)
                  className=""
                  h={4}
                />,
                <Jss(Icon)
                  colors={
                    Array [
                      "#a7a7a7",
                    ]
                  }
                  iconName="arrowDown"
                  style={
                    Object {
                      "transform": "",
                    }
                  }
                  transition="0.3s all"
                />,
              ],
              "display": "flex",
              "justifyContent": "between",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": undefined,
                  "className": "",
                  "h": 4,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "colors": Array [
                    "#a7a7a7",
                  ],
                  "iconName": "arrowDown",
                  "style": Object {
                    "transform": "",
                  },
                  "transition": "0.3s all",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`SlideDown styles matches the snapshot 1`] = `
Object {
  "button": Object {
    "cursor": "pointer",
  },
  "content": Object {
    "transition": "0.3s all",
  },
  "dot": Object {
    "&:after": Object {
      "background": "#1476fb",
      "borderRadius": "3px",
      "content": "\\"\\"",
      "display": "block",
      "height": "5px",
      "left": "calc(100% + 5px)",
      "position": "absolute",
      "top": "50%",
      "transform": "translateY(-50%)",
      "width": "5px",
    },
    "position": "relative",
  },
  "hide": Object {
    "marginBottom": "35px",
    "marginTop": "-35px",
    "opacity": "0",
    "pointerEvents": "none",
  },
  "show": Object {
    "marginBottom": "0",
    "marginTop": "0",
    "opacity": "1",
  },
}
`;

exports[`SlideDownJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(SlideDown)
    expanded={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "button": "SlideDown-button-0-1-46",
        "content": "SlideDown-content-0-1-47",
        "dot": "SlideDown-dot-0-1-50",
        "hide": "SlideDown-hide-0-1-48",
        "show": "SlideDown-show-0-1-49",
      },
      "expanded": false,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "button": "SlideDown-button-0-1-46",
          "content": "SlideDown-content-0-1-47",
          "dot": "SlideDown-dot-0-1-50",
          "hide": "SlideDown-hide-0-1-48",
          "show": "SlideDown-show-0-1-49",
        },
        "expanded": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
